# polynomial_regression

./: CMakeLists.txt  LICENSE.txt  Polynomial.hpp  README.md  polynomial_regression.hpp
.github/workflows/: c-cpp.yml
examples/: CMakeLists.txt  simple_main.cpp
internal/: Polynomial.tpp  polynomial_regression_internals.hpp  polynomial_regression_internals.tpp
tests/: CMakeLists.txt  test_diff_integr.cpp  test_fit.cpp  test_interpolate.cpp
